--- a/fightingBlog/publicaciones/templates/login.html
+++ b/fightingBlog/publicaciones/templates/login.html
@@ -14,64 +14,68 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> 
 </head>
-<body>
-  <header>
-    <div class="rd-navbar-wrap">
-      <nav class="rd-navbar container rd-navbar-floated rd-navbar-dark" data-md-device-layout="rd-navbar-fixed" data-lg-device-layout="rd-navbar-static" data-lg-auto-height="true" data-md-layout="rd-navbar-fixed" data-lg-layout="rd-navbar-static" data-lg-stick-up="true">
-        <div class="rd-navbar-inner">
-          <!-- RD Navbar Panel -->
-          <div class="rd-navbar-panel">
-            <!-- RD Navbar Toggle-->
-            <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar, .rd-navbar-nav-wrap"><span></span></button>
-            <!-- RD Navbar Top Panel Toggle-->
-            <button class="rd-navbar-top-panel-toggle" data-rd-navbar-toggle=".rd-navbar, .rd-navbar-top-panel"><span></span></button>
-            <!--Navbar Brand-->
-            <div class="rd-navbar-brand"><a href="index.html"><img width='173' height='auto' src='images/logo.png' alt=''/></a></div>
-          </div>
-          <div class="rd-navbar-menu-wrap">
-            <div class="rd-navbar-nav-wrap">
-              <div class="rd-navbar-mobile-scroll">
-                <!--Navbar Brand Mobile-->
-                <div class="rd-navbar-mobile-brand"><a href="index.html"><img width='173' height='auto' src='images/logo.png' alt=''/></a></div>
-                <!-- RD Navbar Nav-->
-                <ul class="rd-navbar-nav">
-                  <li class="active"><a href="index.html"><span>INICIO</span></a></li>
-                  <li><a href="ACERCADE.html"><span>ACERCA DE</span></a></li>
-                  <li><a href="CONTACTO.html"><span>CONTACTO</span></a></li>
-                  <li><a href="#"><span>INGRESAR</span></a></li>
-                </ul>
+  <body>
+  <!-- Page-->
+  <div class="page text-center"><a class="section section-banner text-center d-none d-xl-block" ></a>
+    <!-- Page Head-->
+    <header class="page-head slider-menu-position" data-preset='{"title":"Header with slider","category":"header, slider","reload":true,"id":"header-1"}'>      
+      <div class="context-dark">
+        <!-- Modern Breadcrumbs-->
+        <section>
+         
+          <div class="parallax-container breadcrumb-modern bg-gray-darkest" data-parallax-img="images/background-04-1920x750.jpg">
+            <div class="parallax-content"> 
+              <div class="rd-navbar-brand">
+                <a href="index.html"><img width='100' height='auto'  src="{% static 'publicaciones/images/favicon.jpg' %}" alt=''/></a>            
+           </div>
+              <div class="container section-top-98 section-bottom-34 section-lg-bottom-66 section-lg-98 section-xl-top-110 section-xl-bottom-41">
+                
+                <form>
+                  <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label"></label>
+                    <input type="username" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Usuario">
+                    <div id="emailHelp" class="form-text">Nunca compartiremos su correo electrónico.</div>
+                  </div>
+                  <div class="mb-3">
+                    <label for="exampleInputPassword1" class="form-label"></label>
+                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Contraseña">
+                  </div>
+                  <button type="submit" class="btn btn-primary">Ingresar</button>
+                </form>
               </div>
             </div>
           </div>
-        </div>
-      </nav>
-    </div>
-  </header>
-    <br><br><br><br><br><br><br><br><br><br>
-
-    <!--FOOTER-->
-    <footer class="section-relative section-top-66 section-bottom-34 page-footer bg-gray-base context-dark novi-background" data-preset='{"title":"Footer","category":"footer","reload":true,"id":"footer"}'>
-      <div class="container">
-                <p class="pie">Jessica Quiroga - Personal Trainer &copy; <span id="copyright-year"></span> .
-                  Design&nbsp;by&nbsp;<a href="">Bug`s DS</a>
-                </p>
+        </section>
       </div>
-    </footer>
+    </header>
+    
+    <section>
+      <div>
         
-  <!-- JavaScript Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+      </div>
+    </section>
+      <!--FOOTER-->
+      <footer class="section-relative section-top-66 section-bottom-34 page-footer bg-gray-base context-dark novi-background" data-preset='{"title":"Footer","category":"footer","reload":true,"id":"footer"}'>
+        <div class="container">
+                  <p class="pie">Jessica Quiroga - Personal Trainer &copy; <span id="copyright-year"></span> .
+                    Design&nbsp;by&nbsp;<a href="">Bug`s DS</a>
+                  </p>
+        </div>
+      </footer>
+          
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
-   <!-- Bootstrap Core JavaScript -->
-   <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
-   <!-- Contact Form JavaScript -->
-   <script src="{% static 'js/jqBootstrapValidation.js' %}"></script>
-   <script src="{% static 'js/contact_me.js' %}"></script>
+    <!-- Contact Form JavaScript -->
+    <script src="{% static 'js/jqBootstrapValidation.js' %}"></script>
+    <script src="{% static 'js/contact_me.js' %}"></script>
 
-   <!-- Theme JavaScript -->
-   <script src="{% static 'js/clean-blog.min.js' %}"></script>
-</body>
-
+    <!-- Theme JavaScript -->
+    <script src="{% static 'js/clean-blog.min.js' %}"></script>
+  </body>
 </html>
 
     
