--- a/fightingBlog/publicaciones/templates/login.html
+++ b/fightingBlog/publicaciones/templates/login.html
@@ -30,7 +30,7 @@
            </div>
               <div class="container section-top-98 section-bottom-34 section-lg-bottom-66 section-lg-98 section-xl-top-110 section-xl-bottom-41">
                 
-                <form method="POST">{% csrf_token %}
+                <form method="post">{% csrf_token %}
                   <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label"></label>
                     <input type="username" class="form-control" id="exampleInputEmail1"  placeholder="Usuario" name="username">
